# StudyZone

./: .replit  design_guidelines.md  package-lock.json  package.json  pyproject.toml  replit.md  t.py  tailwind.config.ts
attached_assets/: Pasted-Project-Goal-Convert-my-existing-Streamlit-based-LangGraph-Visual-Learning-Assistant-into-a-profess-1760759350565_1760759350565.txt  t_1760757646233.py
client/: index.html
client/src/: index.css
client/src/components/: LessonDisplay.tsx  QuizDisplay.tsx  RoadmapHistory.tsx  WorkflowVisualizer.tsx  app-sidebar.tsx  roadmap-dialog.tsx  roadmap-display.tsx
client/src/components/ui/: LessonSidebar.tsx
client/src/hooks/: useLesson.ts  useRoadmap.ts
client/src/pages/: Dashboard.tsx
server/: .env  index.ts  python_backend.py  roadmap_generator.py  routes.ts  storage.ts  topic_content_generator.py  workflow_runner.py
shared/: schema.ts
