[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.1",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "langchain>=1.0.0",
    "langchain-google-genai>=3.0.0",
    "langgraph>=1.0.0",
    "pillow>=12.0.0",
    "python-dotenv>=1.1.1",
]
